k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: custom-dish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: custom-dish
      labels:
        app: backend
    spec:
      containers:
      - name: custom-dish-backend
        image: whitesnek/custom-dish-backend:latest 
        ports:
        - containerPort: 3000
